--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -4,7 +4,7 @@
       <a class="fa fa-github" href="https://github.com/{{ site.github_username }}"></a>
     {% endif %}
     {% if site.scholar_username %}
-      <a class="ai ai-google-scholar-square ai-3x" href="https://scholar.google.com/citations?user={{ site.scholar_username }}"></a>
+      <a class="ai ai-google-scholar" href="https://scholar.google.com/citations?user={{ site.scholar_username }}"></a>
     {% endif %}
     {% if site.stackoverflow_id %}
       <a class="fa fa-stack-overflow" href="https://stackoverflow.com/users/{{ site.stackoverflow_id }}"></a>
