--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 {% include head.html %}
-<body class="{% if site.animated %}animated fade-in-down{% endif %}">
+<body>
   <div class="site-wrap">
     {% include header.html %}
 
     <div class="post p2 p-responsive wrap" role="main">
-      <div class="measure">
+      <div class="site-content measure">
         {{ content }}
       </div>
     </div>
