--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
+    <title>{{ site.title | default: site.github.repository_name }}</title>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
       <div class="inner">
 
         <header>
-          <h1>{{ site.github.owner_name }}</h1>
+          <h1>{{ site.title }}</h1>
           <h2>{{ site.description | default: site.github.project_tagline }}</h2>
         </header>
         <section id="social" class="clearfix">
