--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,8 +56,8 @@
           </li>
         </a>
         {%- endif -%}
-        {%- if site.plainwhite.social_links.twitter -%}
-        <a href="https://twitter.com/{{ site.plainwhite.social_links.twitter }}" target="_blank">
+        {%- if site.plainwhite.social_links.bluesky -%}
+        <a href="https://bsky.app/profile/{{ site.plainwhite.social_links.bluesky }}" target="_blank">
           <li>
             <i class="icon-twitter-squared"></i>
           </li>
